js/js.translator/testData/incremental/invalidation/unstableIrReproducer/lib2/l2.kt
fun qux() = f1(1) + f2(1)
